# QCQC

./: CMakeLists.txt  README.md  setup.py
src/QCQC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qcqc/: __init__.py  bindings.cpp  cints.cpp  cints.hpp  crys.cpp  crys.hpp  geometry.py  libint.cpp  libint.h  one_int.py  parameter.py  project1.py  util.py
tests/: cpp_test.py  math_test.py
